feat: getManyGenres filtering by parents
